<!--
  ~ Copyright (c) 2016.
  ~ Created by David Mugisha during the DTY Program
  ~ Last Edited on 19/01/16 18:31
  -->

<resources>
    <string name="app_name">Aidevig</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_release_key">AIzaSyAt-MroXnWVAzW400HDcEQnlRUgwdYRImg</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="title_map">Map</string>
    <string name="title_stats">Stats</string>
    <string name="title_profile">Profile</string>
    <string name="title_manage">Tools</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_name">John Doe</string>
    <string name="personal_phonenumber">+33666666666</string>
    <string name="personal_mail">jdoe@aidevig.fr</string>
    <string name="alert_mail">bestfriend@aidevig.fr</string>
    <string name="personal_id">58b8490bd7152c0b8defc5d4</string>
    <string name="imagedescription">profilepicture</string>
    <string name="image_edit_button">image_edit_button</string>
    <string name="text_sendbutton">Vibrate</string>
    <string name="button_enablebluetooth">Enable Bluetooth</string>
    <string name="switch_bluetooth_text">Enable Bluetooth</string>
    <string name="gps_switch_description">Enable GPS</string>
    <string name="textView_syncState">Auto-Synchronization</string>
    <string name="text_deviceName">Device Name</string>
    <string name="deviceName">No Device</string>
    <string name="text_switchSync">Enable Auto-Sync</string>
    <string name="text_serialNumber">MAC Address</string>
    <string name="serialNumber">00:00:00:00:00:00</string>
    <string name="text_softwareVersion">Software Version</string>
    <string name="device_softwareVersion">001</string>
    <string name="text_lastSync">Latest Sync</string>
    <string name="dateLastSync">01/01/1970</string>
    <string name="imageView_text">Main image</string>
    <string name="text_mainImage">Image of the main view</string>
</resources>
