<!--
  ~ Copyright (c) 2016.
  ~ Created by David Mugisha during the DTY Program
  ~ Last Edited on 19/01/16 18:31
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dty.gosafe.activity.ToolsFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        android:focusable="false"
        android:layout_margin="@dimen/widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_deviceName"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/deviceName"
            android:id="@+id/deviceName"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_switchSync"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchSyncState"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_serialNumber"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/serialNumber"
            android:id="@+id/serialNumber"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignEnd="@+id/switchSyncState" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_softwareVersion"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_softwareVersion"
            android:id="@+id/softwareVersion"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignEnd="@+id/switchSyncState" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_lastSync"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dateLastSync"
            android:id="@+id/syncDate"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignEnd="@+id/switchSyncState" />

    </RelativeLayout>

</FrameLayout>
