<!--
  ~ Copyright (c) 2016.
  ~ Created by David Mugisha during the DTY Program
  ~ Last Edited on 19/01/16 18:31
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dty.gosafe.activity.ProfileFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:touchscreenBlocksFocus="false"
        android:transitionGroup="false">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/personal_name"
            android:ems="10"
            android:id="@+id/accountName"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:allowUndo="false"
            android:editable="true"
            android:layout_marginTop="@dimen/widget_margin"
            android:layout_marginBottom="@dimen/widget_margin" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/accountPhoneNumber"
            android:layout_below="@+id/accountName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/personal_phonenumber"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_marginBottom="@dimen/widget_margin" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/accountEmail"
            android:layout_below="@+id/accountPhoneNumber"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:text="@string/personal_mail"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_marginBottom="@dimen/widget_margin" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/profilePicture"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#ffe9e9"
            android:src="@drawable/ic_default_profile"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imagedescription" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:src="@drawable/ic_edit_content"
            android:contentDescription="@string/image_edit_button"
            android:layout_above="@+id/accountName"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</FrameLayout>
